--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ var svg = d3.select("body").append("svg")
 
 var force = d3.layout.force()
     .charge(-999)
-    .linkDistance(200)
+    .linkDistance(height / 4)
     .size([width, height]);
 
 d3.json("network.json", function(json) {
